This update includes a pokemon button selector update

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <!-- Below contains the container that will allow me to move this content to the left thanks to my parent element -->
                 <div id="pokeBattleField">
                     <div id="enemyPokemonContainer">
-                        <div id="enemyPokeName">
+                        <div id="enemyPokeName" class="enemyPokeName">
                             Enemy Pokemon
                         </div>
                         <div id="enemyPokemon">
                             <!-- where enemy pokemon will be inserted -->
-                            <img id="ePPic" src="assets/images/pikachuAnimation.gif" alt="Charmander Gif">
+                            <!-- <img id="ePPic" src="assets/images/pikachuAnimation.gif" alt="Charmander Gif"> -->
                         </div>
                     </div>
                     <div id="chosenPokemonContainer">
@@ -43,8 +43,8 @@
                             Chosen Pokemon
                         </div>
                         <div id="chosenPokemon">
-                            <!-- where chosen pokemon will be inserted -->
-                            <img id="cPPic" src="assets/images/squirtle.png" alt="pikachu stock">
+                            <!-- where chosen pokemon will be inserted
+                            <img id="cPPic" src="assets/images/squirtle.png" alt="pikachu stock"> -->
                         </div>
                     </div>
                 </div>
