completed main goals and functionality. Can still consolidate functions to shorten code and add music if time allows.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
         <div id="Stats">
             <div id="myHealth">
                 Health:
-                <span id="myHealthPoints"></span>
+                <span id="myHealthPoints">
+                    <!-- insert myhealthpoints -->
+                </span>
             </div>
             <div id="enemiesHealth">
                 Enemy:
-                <span id="enemiesHealthPoints"></span>
+                <span id="enemiesHealthPoints">
+                    <!-- insert enemieshealthpoints -->
+                </span>
             </div>
         </div>
         <!-- Below contains my pokemonBattleArea Container -->
